# New-stage-in-programming

./: README.md  pyproject.toml  setup.cfg
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_main_py.html  z_145eef247bfb46b6_models_py.html  z_145eef247bfb46b6_reports_py.html  z_145eef247bfb46b6_services_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_views_py.html
src/: main.py  models.py  reports.py  utils.py
tests/: test_category.py  test_main.py  test_models.py  test_product.py  test_reports.py
