[project]
name = "homework 14"
version = "0.1.0"
description = ""
authors = [
    {name = "Mikhail Krasnoperov",email = "mikhail.krasnoperov@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203,W503"
exclude = ".venv,__pycache__,build,dist,.idea,tests"